<resources>
    <string name="app_name">Private Equity</string>
    <string name="empty">Empty Content</string>
    <string name="btn1">Call</string>
    <string name="btn2">Locate</string>
    <string name="btn3">Sms</string>
    <string name="btn4">Gmail</string>
    <string name="app_name">Google Tasks Sample</string>
    <string name="accounts">Accounts</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="refresh">Refresh</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
</resources>
